--- a/datos.html
+++ b/datos.html
@@ -1,4 +1,4 @@
-<span id="Rosa">Primož ROGLIČ</span>
-<span id="Ciclamino">Pedersen Mads</span>
+<span id="Rosa">Isaac del toro</span>
+<span id="Ciclamino">Mads Pedersen</span>
 <span id="Azurra">Lorenzo F</span>
-<span id="Bianca">Juan Ayuso</span>
+<span id="Bianca">Isaac del toro</span>
