--- a/datos.html
+++ b/datos.html
@@ -1,8 +1,4 @@
-<span id="Rosa">Isaac 
-  del toro</span>
-<span id="Ciclamino">Mads 
-  Pedersen</span>
-<span id="Azurra">Lorenzo
-  F</span>
-<span id="Bianca">Isaac 
-  del toro</span>
+<span id="Rosa">Isaac del toro</span>
+<span id="Ciclamino">Mads Pedersen</span>
+<span id="Azurra">Lorenzo F</span>
+<span id="Bianca">Isaac del toro</span>
