--- a/datos.html
+++ b/datos.html
@@ -1,4 +1,4 @@
-<span id="Rosa">Isaac del toro</span>
-<span id="Ciclamino">Mads Pedersen</span>
-<span id="Azurra">Lorenzo F</span>
-<span id="Bianca">Isaac del toro</span>
+<span id="Rosa">Isaac<br>del toro</span>
+<span id="Ciclamino">Mads<br>Pedersen</span>
+<span id="Azurra">Lorenzo<br> Fortunato</span>
+<span id="Bianca">Isaac<br>del toro</span>
