--- a/datos.html
+++ b/datos.html
@@ -1,4 +1,4 @@
-<span id="Rosa">Isaac<br> del toro</span>
+<span id="Rosa">Simon<br>Yates</span>
 <span id="Ciclamino">Mads<br> Pedersen</span>
 <span id="Azurra">Lorenzo<br> Fortunato</span>
 <span id="Bianca">Isaac<br> del toro</span>
